--- a/AEV7/AEV7/AEV7.csproj
+++ b/AEV7/AEV7/AEV7.csproj
@@ -83,5 +83,8 @@
   <ItemGroup>
     <None Include="Resources\logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\lineaHF.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
